tests/errors/inst/unknown_instruction_5 2.s
.name "Zork"
.comment "Hello, i'm Zork"          

live %1
sta r1,%:live,%1
